<?xml version="1.0"?>
<package format="3">
  <name>custom_lidar_sdk</name>
  <version>0.1.0</version>
  <description>SDK core for custom AA/AD serial LiDAR.</description>
  <maintainer email="tam@example.com">tam</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
